--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ color: hsl(80, 41%, 48%);
 display:flex;
 justify-content: center;
 
+
+
 }
 .txt1{
     background-color:transparent;
@@ -48,3 +50,27 @@ justify-content: center;
 .Knopf{
     text-align:center;
 }
+
+.text{
+    background-color:transparent;
+    color:white;
+    text-align: right;
+    font-size: 30px;
+}
+
+        /* Stil für den Button */
+        .link-button {
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #007BFF; /* Bootstrap Blau */
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none; /* Entfernt die Unterstreichung */
+            align-items:center;
+        }
+
+        .link-button:hover {
+            background-color: #0056b3; /* Dunklerer Blauton beim Hover */
+        }
